# tradingbot-smartAPI

./: .env.example  .gitignore  Dockerfile  README.md  auth.py  docker-compose.yml  main.py  orders.py  pyproject.toml  requirements.txt  smartapi_wrapper.py  webhook.py
monitoring/: prometheus.yml
tests/: test_auth.py  test_main.py  test_redis_client.py  test_smartapi_wrapper.py  test_webhook.py
tradingbot/: main.py
tradingbot/api/: dependencies.py  middleware.py
tradingbot/api/routes/: auth.py  health.py  positions.py  webhook.py
tradingbot/core/: config.py  exceptions.py  logging.py
tradingbot/models/: orders.py
tradingbot/routers/: auth.py  webhook.py
tradingbot/services/: redis_client.py  smartapi_wrapper.py
tradingbot/utils/: logging_config.py
