[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradingbot-smartapi"
version = "2.0.0"
description = "Modern trading bot with SmartAPI integration"
authors = [{name = "Trading Bot", email = "bot@example.com"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "smartapi-python>=1.3.0",
    "google-cloud-storage>=2.10.0",
    "redis>=5.0.0",
    "loguru>=0.7.0",
    "websocket-client>=1.6.0",
    "pyotp>=2.9.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=tradingbot --cov-report=term-missing"